--- a/app/src/main/res/layout-w900dp/grade_list.xml
+++ b/app/src/main/res/layout-w900dp/grade_list.xml
@@ -10,7 +10,7 @@
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
     android:showDividers="middle"
-    tools:context=".views.GradeListActivity">
+    tools:context=".views.ShowGradesActivity">
 
     <!--
     This layout is a two-pane layout for the Grades
@@ -27,7 +27,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        tools:context="pl.pwsz.studentsindex.views.GradeListActivity"
+        tools:context="pl.pwsz.studentsindex.views.ShowGradesActivity"
         tools:listitem="@layout/grade_list_content" />
 
     <FrameLayout
