--- a/app/src/main/res/layout/grade_list.xml
+++ b/app/src/main/res/layout/grade_list.xml
@@ -8,6 +8,6 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:context=".views.GradeListActivity"
+    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+    tools:context=".views.ShowGradesActivity"
     tools:listitem="@layout/grade_list_content" />
