--- a/app/src/main/res/menu/activity_home_screen_drawer.xml
+++ b/app/src/main/res/menu/activity_home_screen_drawer.xml
@@ -5,17 +5,17 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_grades"
+            android:id="@+id/nav_add_grade"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Grades" />
+            android:title="Add grade" />
         <item
-            android:id="@+id/nav_categories"
+            android:id="@+id/nav_add_category"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Categories" />
+            android:title="Add category" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_add_study"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="TODO" />
+            android:title="Add study" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
@@ -26,13 +26,18 @@
     <item android:title="Options">
         <menu>
             <item
+                android:id="@+id/nav_show_grades"
+                android:icon="@drawable/ic_menu_share"
+                android:title="Show grades" />
+            <item
+                android:id="@+id/nav_show_studies"
+                android:icon="@drawable/ic_menu_send"
+                android:title="My studies" />
+            <item
                 android:id="@+id/nav_settings"
                 android:icon="@drawable/ic_menu_share"
                 android:title="Settings//todo" />
-            <item
-                android:id="@+id/nav_studies"
-                android:icon="@drawable/ic_menu_send"
-                android:title="My studies" />
+
         </menu>
     </item>
 
