--- a/app/src/main/res/layout/activity_add_grade.xml
+++ b/app/src/main/res/layout/activity_add_grade.xml
@@ -55,12 +55,17 @@
         android:id="@+id/et_grade_weight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:ems="10"
         android:hint="3"
         android:inputType="numberSigned"
-        app:layout_constraintTop_toBottomOf="@+id/et_grade_value"
-        tools:layout_editor_absoluteX="86dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_grade_value" />
 
     <EditText
         android:id="@+id/et_grade_note"
