--- a/app/src/main/res/layout/activity_add_grade.xml
+++ b/app/src/main/res/layout/activity_add_grade.xml
@@ -33,7 +33,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_grade_note" />
+        app:layout_constraintTop_toBottomOf="@+id/et_grade_note"
+        android:background="@drawable/buttonshape"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"/>
 
     <EditText
         android:id="@+id/et_grade_value"
@@ -73,17 +78,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:ems="10"
         android:hint="note"
-        android:inputType="text"
+        android:inputType="textUri|textShortMessage|text|textImeMultiLine"
+        android:maxLength="40"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_grade_weight"
-        android:maxLength="20"/>
+        app:layout_constraintTop_toBottomOf="@+id/et_grade_weight" />
 
     <TextView
         android:id="@+id/et_category_list_empty"
