--- a/app/src/main/res/layout/activity_add_study.xml
+++ b/app/src/main/res/layout/activity_add_study.xml
@@ -31,6 +31,12 @@
         android:id="@+id/button_save_study"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save" />
+        android:text="Save"
+        android:layout_marginTop="16px"
+        android:background="@drawable/buttonshape"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"/>
 
 </LinearLayout>
