--- a/app/src/main/res/menu/activity_home_screen_drawer.xml
+++ b/app/src/main/res/menu/activity_home_screen_drawer.xml
@@ -20,11 +20,21 @@
             android:id="@+id/nav_manage"
 
             android:title="" />
+        <item
+                android:id="@+id/nav_add_note"
+                android:icon="@drawable/ic_menu_add_note"
+                android:title="Add note" />
+
+
+
+
+
     </group>
     <group></group>
 
     <item android:title="Manage">
         <menu>
+            <group>
             <item
                 android:id="@+id/nav_show_grades"
                 android:icon="@drawable/ic_menu_share"
@@ -36,7 +46,11 @@
             <item
                 android:id="@+id/nav_settings"
                 android:title="" />
-
+                <item
+                    android:id="@+id/nav_show_notes"
+                    android:icon="@drawable/ic_menu_show_notes"
+                    android:title="Show notes" />
+            </group>
         </menu>
     </item>
 
