--- a/app/src/main/res/menu/menu_select_studies_activity.xml
+++ b/app/src/main/res/menu/menu_select_studies_activity.xml
@@ -2,4 +2,5 @@
     <menu xmlns:android="http://schemas.android.com/apk/res/android">
         <item android:id="@+id/edit" android:title="Edit"/>
         <item android:id="@+id/delete" android:title="Delete"/>
-    </menu>
+    <item android:id="@+id/setAsDefault" android:title="setAsDefault"/>
+</menu>
