--- a/app/src/main/res/layout/activity_show_categories.xml
+++ b/app/src/main/res/layout/activity_show_categories.xml
@@ -5,17 +5,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.SelectStudiesActivity">
+    tools:context=".views.ShowCategoriesActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_category_main" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
