--- a/app/src/main/res/layout/exam_row.xml
+++ b/app/src/main/res/layout/exam_row.xml
@@ -9,43 +9,63 @@
 
     <TextView
         android:id="@+id/tv_type"
-        android:layout_width="78dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="115dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
-        android:textSize="14sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/tv_date"
         app:layout_constraintStart_toEndOf="@+id/tv_category"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_date"
-        android:layout_width="78dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="32dp"
+        android:layout_width="87dp"
+        android:layout_height="38dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:textSize="14sp"
+        android:textAlignment="center"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_type"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.666" />
 
     <TextView
         android:id="@+id/tv_category"
-        android:layout_width="113dp"
-        android:layout_height="26dp"
+        android:layout_width="133dp"
+        android:layout_height="32dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:textSize="24sp"
+        android:textAlignment="viewStart"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/grade_value_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="category:"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_category"
+        app:layout_constraintStart_toStartOf="@+id/tv_category" />
+
+    <TextView
+        android:id="@+id/tv_exam_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="type:"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_type"
+        app:layout_constraintStart_toStartOf="@+id/tv_type" />
 
 
 </android.support.constraint.ConstraintLayout>
