--- a/app/src/main/res/layout/grade_detail.xml
+++ b/app/src/main/res/layout/grade_detail.xml
@@ -5,6 +5,7 @@
     style="?android:attr/textAppearanceLarge"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:textSize="24dp"
     android:padding="16dp"
     android:textIsSelectable="true"
     tools:context=".views.GradeDetailFragment" />
