--- a/app/src/main/res/layout/content_home_screen.xml
+++ b/app/src/main/res/layout/content_home_screen.xml
@@ -8,4 +8,99 @@
     tools:context=".views.HomeScreenActivity"
     tools:showIn="@layout/app_bar_home_screen">
 
+    <TextView
+        android:id="@+id/average_grade_label"
+        android:layout_width="187dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
+        android:text="Average grade:"
+        android:textSize="26sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/selected_study_tv" />
+
+    <TextView
+        android:id="@+id/average_grade_tv"
+        android:layout_width="116dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="8dp"
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:text="0.00"
+        android:textColor="@android:color/holo_red_light"
+        android:textColorHighlight="@android:color/holo_blue_light"
+        android:textSize="32sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/average_grade_label"
+        app:layout_constraintStart_toEndOf="@+id/average_grade_label" />
+
+    <Button
+        android:id="@+id/studies_btn"
+        android:layout_width="180dp"
+        android:layout_height="138dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+
+        android:layout_marginBottom="8dp"
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:text="Studies"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/notes_btn" />
+
+    <Button
+        android:id="@+id/notes_btn"
+        android:layout_width="180dp"
+        android:layout_height="138dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:text="Notes"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/exams_btn"
+        android:layout_width="180dp"
+        android:layout_height="138dp"
+        android:layout_marginStart="8dp"
+
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:text="Exams"
+        app:layout_constraintBottom_toTopOf="@+id/studies_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/categories_btn" />
+
+    <Button
+        android:id="@+id/categories_btn"
+        android:layout_width="180dp"
+        android:layout_height="138dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:text="Categories"
+        app:layout_constraintBottom_toTopOf="@+id/notes_btn"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/selected_study_tv"
+        android:layout_width="363dp"
+        android:layout_height="84dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:textSize="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/selected_study_year_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/selected_study_tv"
+        app:layout_constraintStart_toStartOf="@+id/selected_study_tv" />
 </android.support.constraint.ConstraintLayout>
